# pySDC

./: .buildinfo  .coverage.giacomo-X10DAi.1292129.XFWmdkcx  .coverage.giacomo-X10DAi.1293177.XoJwGGyx  .coverage.giacomo-X10DAi.1293296.XjPEQlmx  .coverage.giacomo-X10DAi.1293420.XpdNypYx  .coverage.giacomo-X10DAi.1293436.XtjoyxGx  .coverage.giacomo-X10DAi.1293443.XhybyIvx  .coverage.giacomo-X10DAi.1294521.XaDYXMAx  .coverage.giacomo-X10DAi.1367799.XWsheqUx  .coverage.giacomo-X10DAi.1369023.XxMRFQNx  .coverage.giacomo-X10DAi.1369115.XVoybvzx  .coverage.giacomo-X10DAi.1369243.XiNMyRUx  .coverage.giacomo-X10DAi.1369265.XnkLgOTx  .coverage.giacomo-X10DAi.1369266.XZhHCxBx  .coverage.giacomo-X10DAi.3151558.XgIyKOCx  .coverage.giacomo-X10DAi.3160272.XapQiLNx  .coverage.giacomo-X10DAi.3164542.XFkeELdx  .coverage.giacomo-X10DAi.3166221.XjTXzLHx  .coverage.giacomo-X10DAi.3166244.XPGmNLfx  .coverage.giacomo-X10DAi.3180647.XyZjjLmx  .coverage.giacomo-X10DAi.3182067.XRgncEkx  .coverage.giacomo-X10DAi.3182185.XnYhFqzx  .coverage.giacomo-X10DAi.3182353.XDPeeqSx  .coverage.giacomo-X10DAi.3953155.XLzLMyVx  .coverage.giacomo-X10DAi.3953288.XPRnjqax  .coverage.giacomo-X10DAi.3953381.XsTGFcZx  .coverage.giacomo-X10DAi.3953399.XdOnAIXx  .coverage.giacomo-X10DAi.3953404.XHBOeeMx  .coverage.giacomo-X10DAi.4149563.XICpuIZx  .coverage.giacomo-X10DAi.4150017.XlGJYdax  .coverage.giacomo-X10DAi.81903.XHPfEvux  .coverage.giacomo-X10DAi.82055.XXdJciqx  .coverage.giacomo-X10DAi.82233.XekxShcx  .coverage.giacomo-X10DAi.82243.XHsTYgHx  .coverage.giacomo-X10DAi.82256.XBxtQKKx  .coveragerc  .flake8  .flake8_nb  .gitignore  .gitlab-ci.yml  (+43 more)
.doctrees/: CHANGELOG.doctree  CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  README.doctree  environment.pickle  index.doctree
.github/: dependabot.yml  failure_analysis.md
_modules/: index.html
_sources/: CHANGELOG.rst.txt  CODE_OF_CONDUCT.rst.txt  CONTRIBUTING.rst.txt  README.rst.txt
_static/: custom.css  documentation_options.js
coverage/: class_index.html  d_020efe120a771d8a_fput_py.html  d_020efe120a771d8a_hamiltonian_and_energy_output_py.html  d_020efe120a771d8a_hamiltonian_output_py.html  d_020efe120a771d8a_harmonic_oscillator_py.html  d_020efe120a771d8a_simple_problems_py.html  d_020efe120a771d8a_solar_system_py.html  d_020efe120a771d8a_stop_at_error_hook_py.html  d_04cb75334c2a5eef_data_management_py.html  d_064a9f2a35945611_FaultHooks_py.html  d_064a9f2a35945611_generate_statistics_py.html  d_064a9f2a35945611_implicit_sweeper_faults_py.html  d_064a9f2a35945611_visualization_helper_py.html  d_0a363dd8c140c711_DAEMesh_py.html  d_0a363dd8c140c711_HookClass_DAE_py.html  d_0a363dd8c140c711_ProblemDAE_py.html  d_0c21c203c9df60ee_AllenCahn_dump_py.html  d_0c21c203c9df60ee_AllenCahn_monitor_and_dump_py.html  d_0c21c203c9df60ee_AllenCahn_monitor_py.html  d_0c21c203c9df60ee_run_simple_forcing_benchmark_py.html  d_0c21c203c9df60ee_run_simple_forcing_verification_py.html  d_0c21c203c9df60ee_run_temp_forcing_benchmark_py.html  d_0c21c203c9df60ee_run_temp_forcing_realistic_py.html  d_0c21c203c9df60ee_run_temp_forcing_reference_py.html  d_0c21c203c9df60ee_run_temp_forcing_verification_py.html  d_0c21c203c9df60ee_visualize_py.html  d_0c21c203c9df60ee_visualize_temp_py.html  d_0eb34c630be51b75_DiscontinuousTestDAE_py.html  d_0eb34c630be51b75_WSCC9BusSystem_py.html  d_0eb34c630be51b75_simple_DAE_py.html  d_0eb34c630be51b75_synchronous_machine_py.html  d_0eb34c630be51b75_transistor_amplifier_py.html  d_11ffac7f7ab8bb8d_A_pySDC_with_FEniCS_py.html  d_11ffac7f7ab8bb8d_B_pySDC_with_mpi4pyfft_py.html  d_11ffac7f7ab8bb8d_C_pySDC_with_PETSc_py.html  d_15820e38ae7f8080_fully_implicit_DAE_py.html  d_1ba2acb451842eb0_allenCahn_accuracy_py.html  d_1ba2acb451842eb0_allenCahn_setup_py.html  d_1ba2acb451842eb0_chemicalReaction_accuracy_py.html  d_1ba2acb451842eb0_chemicalReaction_setup_py.html  (+720 more)
data/: AC-test-constforce_results.json  AC-test-noforce_results.json  AC-test-timeforce_results.json  Lorenz-Hot Rod-1procs.pickle  Lorenz-Hot Rod-faults-1procs.pickle  Lorenz-adaptivity-faults-1procs.pickle  Lorenz-adaptivity_coll-1procs.pickle  Lorenz-adaptivity_coll-faults-1procs.pickle  Lorenz-base-1procs.pickle  Lorenz-base-faults-1procs.pickle  Lorenz-double_adaptivity-1procs.pickle  Lorenz-double_adaptivity-faults-1procs.pickle  Lorenz-iterate-1procs.pickle  Lorenz-iterate-faults-1procs.pickle  README  buck_out.txt  comparison_matrix_vs_nomat_detail.txt  comparison_matrix_vs_propagator_detail.txt  dae_conv_data.p  dump_injections_vanderpol.txt  energy-sdc.txt  error_reduction_data.pkl  fput_out.txt  full_solar_system_out.txt  outer_solar_system_out.txt  parallelSDC_iterations_precond.pkl  parallelSDC_iterations_precond_MPI.pkl  parallelSDC_nonlinear_out.txt  parallelSDC_results_graphs.pkl  piline_out.txt  results_conv_advection_Linf_QILU.txt  results_conv_advection_Linf_QILU2.txt  results_conv_advection_NS2.pkl  results_conv_advection_NS3.pkl  results_conv_diffusion_Linf_QILU.txt  results_conv_diffusion_Linf_QILU2.txt  results_conv_diffusion_NS2.pkl  results_conv_diffusion_NS3.pkl  results_vanderpol.pkl  step_1_A_out.txt  (+29 more)
doc/: Makefile  make.bat
docs/: convert_markdown.py  update_apidocs.sh
etc/: README.md  check_node_avail.sh  environment-base.yml  environment-benchmark.yml  environment-cupy.yml  environment-fenics.yml  environment-lint.yml  environment-monodomain.yml  environment-mpi4py-fft.yml  environment-mpi4py.yml  environment-petsc.yml  environment-postprocess.yml  environment-pytorch.yml  environment-tests.yml  environment.yml  juwels_benchmark.sh  juwels_cupy.sh
examples/: ruprecht_speck_2016.README
playgrounds/: README.rst
projects/: AllenCahn_Bayreuth.html  DAE.html  GPU.html  Hamiltonian.html  PinTSimE.html  RDC.html  README.rst  Resilience.html  SDC_showdown.html  asymp_conv.html  compression.html  doc_SDC_showdown.html  doc_asympconv.html  doc_fput.html  doc_fwsw_acoustic.html  doc_fwsw_boussinesq.html  doc_fwsw_theory.html  doc_hamiltonian_simple.html  doc_matrixPFASST_matrix.html  doc_matrixPFASST_propagator.html  doc_node_failure_boussinesq.html  doc_performance.html  (+16 more)
(+3605 files in other folders)
